Minor JavaScript tidy-ups

--- a/main/src/webapp/WEB-INF/learning_plan.html
+++ b/main/src/webapp/WEB-INF/learning_plan.html
@@ -318,7 +318,7 @@
             ,useRealTrainingData: "true"
 //            ,useDummyTrainingData: "true"
         };
-        startup(options);
+        learning_plan_startup(options);
     </script>
 
 </div>
