Re-enable the slideIn functionality when expanding a course

--- a/main/src/webapp/WEB-INF/learning_plan.html
+++ b/main/src/webapp/WEB-INF/learning_plan.html
@@ -184,7 +184,7 @@
                         <!-- /ko -->
                     </tr>
                 </table>
-        <table class="lp_expanded_course" data-bind="visible: expanded$()">
+        <table class="lp_expanded_course" data-bind="slideIn: expanded$()">
             <tr class="lp_course_expanded_container" data-bind="with: current_training$()">
                 <td class="lp_course_expanded_image_box">
                     <div class="pull-right">
