Add a 'more' button for truncated descriptions

--- a/main/src/webapp/WEB-INF/learning_plan.html
+++ b/main/src/webapp/WEB-INF/learning_plan.html
@@ -208,6 +208,7 @@
                         <div class="lp_course_expanded_description" data-bind="click: toggleExpandedDescription">
                             <!-- ko if: !extraTrainingInfo.descriptionExpanded$() -->
                                 <p class="lp-paragraph-shrunk" data-bind="text: extraTrainingInfo.description$()"></p>
+                                <a href=""><span class="lp-paragrap-more">more</span></a>
                             <!-- /ko -->
                             <!-- ko if: extraTrainingInfo.descriptionExpanded$() -->
                                 <p class="lp-paragraph-expanded" data-bind="text: extraTrainingInfo.description$()"></p>
