Change the loading message (add a .gif) and change the message when no training data found

--- a/main/src/webapp/WEB-INF/learning_plan.html
+++ b/main/src/webapp/WEB-INF/learning_plan.html
@@ -102,10 +102,10 @@
     <div class="lp_category_section">
         <div class="lp_category_section_header">
             <!-- ko if: !category_plan$() -->
-            Loading Training Data &hellip;
+            Loading your learning plan <img data-bind="src: loadingAnimationSrc$">
             <!-- /ko -->
             <!-- ko if: category_plan$() -->
-            No matching Training Data found
+            Your learning plan is empty
             <!-- /ko -->
         </div>
     </div>
