Show lesson number in front of each lesson name

--- a/main/src/webapp/WEB-INF/learning_plan.html
+++ b/main/src/webapp/WEB-INF/learning_plan.html
@@ -238,6 +238,7 @@
                         <table class="lp_course_expanded_lesson">
                             <tr>
                                 <td>
+                                    <span class="lp_course_expanded_lesson_title" data-bind="text: extraLessonInfo.lessonNumber"></span>.
                                     <span class="lp_course_expanded_lesson_title" data-bind="text: Lesson.Title"></span>
                                 </td>
                                 <td class="lp_course_lesson_button_container">
