Adjust rootContentUrl to point at rawgit, branch 'grid'

--- a/main/src/webapp/WEB-INF/learning_plan.html
+++ b/main/src/webapp/WEB-INF/learning_plan.html
@@ -332,7 +332,7 @@
 //            ,rootUIUrl: 'http://dev.kallidus.com/DevEval/LMS/'
             ,rootAPIUrl: '/DevEval/LMS/Handlers/ApiProxy.ashx/'
             ,rootUIUrl: '/DevEval/LMS/'
-            ,rootContentUrl: ''
+            ,rootContentUrl: 'https://rawgit.com/cjosw/testlp/grid/main/src/webapp/WEB-INF/'
             ,useDummyUser: "false"
             ,useRealTrainingData: "true"
 //            ,useDummyTrainingData: "true"
