Use JavaScript call to open the Live Chat window

--- a/main/src/webapp/WEB-INF/learning_plan.html
+++ b/main/src/webapp/WEB-INF/learning_plan.html
@@ -228,7 +228,7 @@
                             <tr>
                                 <td class="lp_course_expanded_link">
                                     <!-- ko if: extraTrainingInfo.hasChatRoom$() -->
-                                    <a href="#" data-bind="click: openLiveChatWindow">
+                                    <a href="#" data-bind="click: openLiveChat">
                                         <span class="glyphicon glyphicon-new-window"></span> Live chat
                                     </a>
                                     <!-- /ko -->
