--- a/main/src/webapp/WEB-INF/learning_plan.html
+++ b/main/src/webapp/WEB-INF/learning_plan.html
@@ -131,6 +131,7 @@
         <div>
                 <table class="lp_course_section">
                     <tr>
+                        <td class="lp_course_margin_column"></td>
                         <!-- ko foreach: courses -->
                         <td class="lp_course_column">
                                 <table data-bind="if: !extraTrainingInfo.blank" class="lp_course_table">
@@ -191,6 +192,7 @@
                                 </table>
                         </td>
                         <!-- /ko -->
+                        <td class="lp_course_margin_column"></td>
                     </tr>
                 </table>
         <table class="lp_expanded_course" data-bind="slideIn: expanded$()">
