Change filter to show incomplete courses only

--- a/main/src/webapp/WEB-INF/learning_plan.html
+++ b/main/src/webapp/WEB-INF/learning_plan.html
@@ -88,8 +88,8 @@
                     <td class="lp_filter_completed">
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox" class="lp_filter_checkbox" data-bind="checked: showCompletedCoursesOnly$">
-                                Show completed courses
+                                <input type="checkbox" class="lp_filter_checkbox" data-bind="checked: showIncompleteCoursesOnly$">
+                                Show incomplete courses only
                             </label>
                        </div>
                     </td>
