Detect confusion when IE runs in a grotty compatibility mode

--- a/main/src/webapp/WEB-INF/learning_plan.html
+++ b/main/src/webapp/WEB-INF/learning_plan.html
@@ -21,6 +21,7 @@
 <script type='text/javascript' src='scripts/user.js'></script>
 <script type='text/javascript' src='scripts/course.js'></script>
 <script type='text/javascript' src='scripts/utils.js'></script>
+<script type='text/javascript' src='scripts/browser.js'></script>
 <script type='text/javascript' src='scripts/testdata.js'></script>
 
 
@@ -328,6 +329,7 @@
             ,useDummyUser: "false"
             ,useRealTrainingData: "true"
 //            ,useDummyTrainingData: "true"
+            ,checkBrowser: "true"
         };
         learning_plan_startup(options);
     </script>
