Preload course descriptions, and use them in the search, plus lesson titles & descriptions (from training plan)

--- a/main/src/webapp/WEB-INF/learning_plan.html
+++ b/main/src/webapp/WEB-INF/learning_plan.html
@@ -336,6 +336,7 @@
             ,useDummyUser: "false"
             ,useRealTrainingData: "true"
 //            ,useDummyTrainingData: "true"
+            ,preloadCourses: "true"
             ,checkBrowser: "true"
         };
         learning_plan_startup(options);
