Catch enter key when used in the search filter

--- a/main/src/webapp/WEB-INF/learning_plan.html
+++ b/main/src/webapp/WEB-INF/learning_plan.html
@@ -70,7 +70,7 @@
     </div>
 
     <div class="lp_filter_bar" data-bind="with: filters">
-        <form class="form-inline">
+        <form class="form-inline" data-bind="submit: function(){} ">
             <table>
                 <tr>
                     <td class="lp_filter_search">
